syntax = "proto3";

package payment;



option go_package = "github.com/SabinGhost19/go-micro-payment/proto/paymentpb";

// Payment service for handling payments via Stripe API
service PaymentService {
  rpc InitiatePayment (InitiatePaymentRequest) returns (PaymentResponse) {}
  rpc CheckPaymentStatus (CheckPaymentStatusRequest) returns (PaymentResponse) {}
}

// Request to initiate payment
message InitiatePaymentRequest {
  string order_id = 1;
  double amount = 2;
  string currency = 3;
  string user_id = 4;
  string payment_method_id = 5; // Stripe PaymentMethod ID, if known
}

// Check payment status by payment ID
message CheckPaymentStatusRequest {
  string payment_id = 1;
}

// Payment response
message PaymentResponse {
  string payment_id = 1;
  string order_id = 2;
  string status = 3; // PENDING, PAID, FAILED
  string provider = 4; // e.g., "stripe"
  string created_at = 5;
  string updated_at = 6;
  string message = 7;
}
